# NetScanner

./: .gitignore  Controlled.py  Controller.py  Device.py  Hostname_resolver.py  Main.py  Screenshot.py  Shutdown.py  attacks_detection.py  controlled_connection.py  controlled_gui.py  controller_connection.py  encrypted_client.py  encrypted_server.py  get_net_info.py  gui.py  mac_vendor.py  main.py  network_scanner.py  network_testing.py  network_transmition_scanner.py  port_connections_scanner.py  port_scanner.py  recieved_pcap.pcap  requirements.txt  sent_pcap.pcap  shutdown_restart.py  sniffReq.py  sniffSen.py  test.py  traffic_testing.py  wifi_pass_tester.py
keys/: privateKey.pem  publicKey.pem  symKey.pem
poetry_maybe/: pyproject.toml
