[tool.poetry]
name = "netscanner"
version = "0.1.0"
description = ""
authors = ["Guy Menashes <guy.menashes@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
imutils = "^0.5.4"
screeninfo = "^0.8.1"
pywin32 = "^305"
cryptography = "^39.0.1"
rsa = "^4.9"
scapy = "^2.5.0"
requests = "^2.28.2"
keyboard = "^0.13.5"
pillow = "^9.4.0"
pynput = "^1.7.6"
opencv-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
